WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231128
[LFC][IFC] HangingTrailingContent should cache width/length
https://bugs.webkit.org/show_bug.cgi?id=231128
Summary
[LFC][IFC] HangingTrailingContent should cache width/length
alan
Reported
2021-10-02 18:55:21 PDT
instead of re-computing
Attachments
Patch
(8.30 KB, patch)
2021-10-02 18:57 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(8.30 KB, patch)
2021-10-02 20:26 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(8.29 KB, patch)
2021-10-02 20:29 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(8.64 KB, patch)
2021-10-03 16:46 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-10-02 18:57:09 PDT
Created
attachment 439982
[details]
Patch
alan
Comment 2
2021-10-02 20:26:55 PDT
Created
attachment 439988
[details]
Patch
alan
Comment 3
2021-10-02 20:29:28 PDT
Created
attachment 439989
[details]
Patch
alan
Comment 4
2021-10-03 16:46:31 PDT
Created
attachment 440025
[details]
Patch
EWS
Comment 5
2021-10-03 18:07:33 PDT
Committed
r283485
(
242458@main
): <
https://commits.webkit.org/242458@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 440025
[details]
.
Radar WebKit Bug Importer
Comment 6
2021-10-03 18:08:29 PDT
<
rdar://problem/83819509
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug