[LFC][IFC] HangingTrailingContent should cache width/length https://bugs.webkit.org/show_bug.cgi?id=231128

Reviewed by Antti Koivisto.

Compute the length of the hanging trailing whitespace sequence.
This is in preparation for fixing imported/w3c/web-platform-tests/css/css-text/white-space/textarea-pre-wrap-014.html

* layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::Line):
(WebCore::Layout::Line::initialize):
(WebCore::Layout::Line::resetTrailingContent):
(WebCore::Layout::Line::appendTextContent):
(WebCore::Layout::Line::appendNonReplacedInlineLevelBox):
(WebCore::Layout::Line::HangingTrailingContent::add):
(WebCore::Layout::Line::HangingTrailingContent::HangingTrailingContent): Deleted.
(WebCore::Layout::Line::HangingTrailingContent::width const): Deleted.
* layout/formattingContexts/inline/InlineLine.h:
(WebCore::Layout::Line::HangingTrailingContent::length const):
(WebCore::Layout::Line::HangingTrailingContent::width const):
(WebCore::Layout::Line::HangingTrailingContent::reset):


Canonical link: https://commits.webkit.org/242458@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283485 268f45cc-cd09-0410-ab3c-d52691b4dbfc